force-app/main/default/objects/Opportunity_Treatment__c/Opportunity_Treatment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Treatment</label>
    <nameField>
        <displayFormat>OT-{000000}</displayFormat>
        <label>Opportunity Treatment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>