force-app/main/default/objects/Opportunity_Treatment__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <referenceTo>Treatment__c</referenceTo>
    <relationshipLabel>Opportunity Treatments</relationshipLabel>
    <relationshipName>Opportunity_Treatments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>