force-app/main/default/objects/Opportunity_Treatment__c/fields/Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Status__c</fullName>
    <formula>TEXT(Treatment__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Status</label>
    <type>Text</type>
</CustomField>