force-app/main/default/objects/Opportunity_Treatment__c/fields/Treatment_Title__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Title__c</fullName>
    <formula>Treatment__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Title</label>
    <type>Text</type>
</CustomField>