force-app/main/default/objects/Opportunity_Treatment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Treatment__c</columns>
    <columns>Treatment_Status__c</columns>
    <columns>Treatment_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>