force-app/main/default/objects/Opportunity_Treatment__c/listViews/Pending_Opp_Status.listView-meta.xml
<ListView>
    <fullName>Pending_Opp_Status</fullName>
    <columns>Treatment__c</columns>
    <columns>Treatment_Status__c</columns>
    <columns>Treatment_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Opp</value>
    </filters>
    <label>Pending Opp Status</label>
</ListView>